--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "uuid": "^8.3.2",
     "wagmi": "^0.4.5",
     "web3.storage": "^4.2.0"
   },
