--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@apollo/client": "^3.6.2",
     "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
+    "@heroicons/react": "^1.0.6",
     "@rainbow-me/rainbowkit": "^0.2.2",
     "ethers": "^5.6.6",
     "graphql": "^16.5.0",
-    "next": "12.0.7",
+    "next": "^12.2.5",
     "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -27,12 +27,15 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.1",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
     "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.2.15",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.2"
+    "tailwindcss": "^3.0.2",
+    "typescript": "^4.8.2"
   }
 }
